--- a/index.html
+++ b/index.html
@@ -93,10 +93,6 @@
     /* Input Section */
     .input-section {
       margin-top: 40px;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 10px;
       animation: fadeIn 1.5s ease-in-out;
     }
 
@@ -166,6 +162,7 @@
     .error-message {
       color: red;
     }
+    
   </style>
   <script>
     function updateGreeting() {
@@ -334,7 +331,7 @@
       <div class="input-section">
         <textarea id="query" rows="4" placeholder="Enter search query..."></textarea>
         <button onclick="searchDocuments()">Search</button>
-        <button onclick="resetSearch()">Reset</button>
+        <button onclick="resetSearch()" style="background-color: #D70040;">Reset</button>
         <p id="error-message" class="error-message"></p>
       </div>
 
